docs: Add auth docs
